testing/terraform-rds/securitygroups.tf
resource "aws_security_group" "sg01" {
  name   = "sg01"
  vpc_id = aws_vpc.vpc01.id
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
